--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/indicadores/IndicadoresActividadesTrabajoSocialPlanificadoIndex.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/indicadores/IndicadoresActividadesTrabajoSocialPlanificadoIndex.zul
@@ -1,3 +1,9 @@
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
+
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div class="wizard ${arg.animation_}" style="padding:0px auto"
 		use="karen.core.wizard.controllers.C_WindowWizard"
