--- a/WebContent/assets/css/components-jarvis.css
+++ b/WebContent/assets/css/components-jarvis.css
@@ -815,11 +815,9 @@ tr.row-vacaciones {
 	border-top: 1px solid #cfcfcf;
 	padding: 18px 6px;
 	line-height: normal;
-	background: transparent !important;
+	background: white !important;
 	vertical-align: top;
 }
-
-
 
 .z-detail {
 	font-size: 14px;
@@ -924,5 +922,63 @@ tr.header-periodo-disfute {
 .z-grid .z-row>.z-row-inner,.z-grid .z-row>.z-cell {
 	background-image: none;
 	border: 0px transparent !important;
-	border-top: 1px solid #cfcfcf !important;
+	border-bottom: 1px solid #cfcfcf !important;
+}
+
+.z-grid-body table {
+	border-spacing: 0;
+	border-collapse: collapse !important;
+}
+
+.detailSectionWizard {
+	background: white;
+	padding: 12px;
+	color: #3b85a1 !important;
+	border: 5px solid #3b85a1;
+	font-size: 14px !important;
+}
+
+.line-evento {
+	width: 100%;
+	background-color: #f2fca5;
+	height: 15px;
+	margin-top: 20px;
+}
+
+.titulo-evento {
+	color: #f26b7a !important;
+	line-height: 32px;
+	text-align: center;
+	font-size: 22px;
+	text-transform: capitalize;
+	display: inherit;
+}
+
+.subtitulo-evento {
+	color: #3b85a1 !important;
+	line-height: 45px;
+	text-align: center;
+	font-size: 22px;
+	text-transform: capitalize;
+	display: inherit;
+}
+
+.descripcion-evento {
+	color: #8d7a6f !important;
+	line-height: 20px;
+	text-align: justify;
+	font-size: 17px;
+	display: inherit;
+	text-indent: 16px;
+}
+
+.info-titulo-evento {
+	color: #3b85a1 !important;
+	font-weight: 600;
+	font-size: 16px;
+}
+
+.info-descripcion-evento {
+	color: #8d7a6f;
+	font-size: 16px;
 }
