--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/asignacion/editActividadesTrabajoSocialPlanificado.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/asignacion/editActividadesTrabajoSocialPlanificado.zul
@@ -4,15 +4,124 @@
 		.z-datebox-input:active{ font-size: 1.2em !important;
 		text-align: center; height: 1.5em !important; border: 1px solid
 		#999999; border-radius: 7px; font-size: 1em !important;
-		text-align: center; margin-top: 4px; width: 93%;}
+		text-align: center; margin-top: 4px; width: 93%; background:
+		#f2fca5;}
 	</style>
 	<div sclass="animated fadeInLeft">
+		<div sclass="row">
+			<div sclass="col s12">
+				<div class=" col s12">
+					<div class=" row line-evento" style="margin:0px">
+					</div>
+				</div>
+				<div class=" col s12">
+					<div sclass="row"
+						style="margin:0px;background: #FFF">
 
+						<div sclass="col s3">
+							<n:br></n:br>
+							<n:br></n:br>
+							<div align="center"
+								visible="@load(not empty vm.selectedObject.fkMultimedia and not empty vm.selectedObject.fkMultimedia.url)">
+								<image
+									class="img-responsive circle center-block"
+									src="${m:getUrlWeb(vm.selectedObject.fkMultimedia.url)}"
+									width="128px" height="128px">
+								</image>
+							</div>
+							<n:br></n:br>
+						</div>
+						<div sclass="col s9" align="center">
+							<div sclass="col s12" align="center">
+								<label sclass="titulo-evento"
+									value="@bind(vm.selectedObject.fkTrabajoSocial.nombre)">
+								</label>
+
+								<label sclass="subtitulo-evento"
+									value="@bind(vm.selectedObject.fkTrabajoSocial.fkClasificadorTrabajoSocial.nombre)">
+								</label>
+
+								<div sclass="row">
+									<label sclass="descripcion-evento"
+										value="@bind(vm.selectedObject.fkTrabajoSocial.descripcion)">
+
+									</label>
+								</div>
+								<div sclass="row">
+									<div sclass="col s8" align="left"
+										style="padding:0px">
+
+										<label
+											sclass="info-titulo-evento">
+											Fecha Inicio:
+										</label>
+										<label
+											sclass="info-descripcion-evento"
+											value="${m:convertirLongADate(vm.selectedObject.fechaInicio)}">
+
+										</label>
+										<label
+											sclass="info-descripcion-evento" value="        ">
+										</label>
+										<label
+											sclass="info-titulo-evento">
+											Fecha Fin:
+										</label>
+										<label
+											sclass="info-descripcion-evento"
+											value="${m:convertirLongADate(vm.selectedObject.fechaFin)}">
+
+										</label>
+										<n:br></n:br>
+										<label
+											sclass="info-titulo-evento">
+											Lugar:
+										</label>
+										<label
+											sclass="info-descripcion-evento"
+											value="@bind(vm.selectedObject.fkDirectorio.nombre)">
+										</label>
+										<n:br></n:br>
+										<label
+											sclass="info-titulo-evento">
+											Dirección:
+										</label>
+										<label
+											sclass="info-descripcion-evento"
+											value="@bind(vm.selectedObject.fkDirectorio.direccion)">
+
+										</label>
+										<n:br></n:br>
+
+									</div>
+									<div sclass="col s4">
+										<image
+											class="img-responsive center-block"
+											src="/imagenes/portal/icon/mapa.png"
+											style="width: auto;padding: 0px;margin: 0px;display: inline-block;">
+										</image>
+										<span
+											class="fa fa-search center-block"
+											style=" width: auto; margin: 0px; display: inline-block;vertical-align: bottom;color:#3b85a1">
+										</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class=" col s12">
+					<div class=" row line-evento" style="margin:0px">
+					</div>
+				</div>
+			</div>
+		</div>
+		<separator height="20px"></separator>
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
 				<label
-					value="Complete la información de los indicadores seleccionados"
+					value="Complete la información de las actividades seleccionados"
 					sclass="label-medium-500">
 				</label>
 			</div>
@@ -22,15 +131,16 @@
 			<div class="col s12">
 
 				<listbox height="300px"
-					emptyMessage="No hay indicadores asociados al del trabajo social."
+					emptyMessage="No hay actividades asociados al del trabajo social."
 					model="@bind(vm.tsPlanActividads)">
 					<listhead sizable="true">
 						<listheader width="35%" label="Actividad" />
 						<listheader width="20%"
 							label="Fecha Planificada" />
-						<listheader width="35%" label="Lugar"
+						<listheader width="30%" label="Lugar"
 							align="center" />
-						<listheader width="10%" label="" align="right" />
+						<listheader width="5%" label="" align="right" />
+						<listheader width="5%" label="" align="right" />
 					</listhead>
 					<template name="model">
 						<listitem>
@@ -44,21 +154,28 @@
 							</listcell>
 
 							<listcell>
-
 								<label
 									value="@bind(each.fkDirectorio.nombre)">
 								</label>
-								<label visible="empty each.fkDirectorio"
+								<label
+									visible="empty each.fkDirectorio.idDirectorio"
 									value="Lugar sin asignar">
 								</label>
-
 							</listcell>
 							<listcell>
 								<button
 									sclass="teal lighten-1 waves-effect waves-light"
 									onClick="@command('buscarDirectorio', index=forEachStatus.index)"
 									iconSclass="fa fa-search" tooltiptext="Editar Lugar"
-									style="/padding: 5px 6px; background-color: #2AA4EF !important; float: right">
+									style="padding: 5px 6px; background-color: #2AA4EF !important; float: right">
+								</button>
+							</listcell>
+							<listcell>
+								<button
+									sclass="red waves-effect waves-light "
+									onClick="@command('removerDirectorio', index=forEachStatus.index)"
+									iconSclass="fa fa-times" tooltiptext="Remover Lugar"
+									style="padding: 5px 8px;float: right;border: none;">
 								</button>
 							</listcell>
 						</listitem>
