--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/selectIndicadoresTrabajoSocialPlanificado.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/selectIndicadoresTrabajoSocialPlanificado.zul
@@ -1,66 +1,189 @@
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
-			<div class="col s12" align="center"
-				style="margin-bottom: 15px;">
-				<label
-					value="Seleccione los indicadores del trabajo social planificado"
-					sclass="label-medium-500">
-				</label>
-			</div>
-
-		</div>
-		<div class="row">
-			<div class="col s12">
+			<div sclass="row">
 				<div sclass="col s12">
-					<button label="Usar Plantilla" onClick="@command('buscarPlantilla')"
-						sclass="buttonPlantilla">
-					</button>
+					<div class=" col s12">
+						<div class=" row line-evento"
+							style="margin:0px">
+						</div>
+					</div>
+					<div class=" col s12">
+						<div sclass="row"
+							style="margin:0px;background: #FFF">
+
+							<div sclass="col s3">
+								<n:br></n:br>
+								<n:br></n:br>
+								<div align="center"
+									visible="@load(not empty vm.selectedObject.fkMultimedia and not empty vm.selectedObject.fkMultimedia.url)">
+									<image
+										class="img-responsive circle center-block"
+										src="${m:getUrlWeb(vm.selectedObject.fkMultimedia.url)}"
+										width="128px" height="128px">
+									</image>
+								</div>
+								<n:br></n:br>
+							</div>
+							<div sclass="col s9" align="center">
+								<div sclass="col s12" align="center">
+									<label sclass="titulo-evento"
+										value="@bind(vm.selectedObject.fkTrabajoSocial.nombre)">
+									</label>
+
+									<label sclass="subtitulo-evento"
+										value="@bind(vm.selectedObject.fkTrabajoSocial.fkClasificadorTrabajoSocial.nombre)">
+									</label>
+
+									<div sclass="row">
+										<label
+											sclass="descripcion-evento"
+											value="@bind(vm.selectedObject.fkTrabajoSocial.descripcion)">
+
+										</label>
+									</div>
+									<div sclass="row">
+										<div sclass="col s8"
+											align="left" style="padding:0px">
+
+											<label
+												sclass="info-titulo-evento">
+												Fecha Inicio:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaInicio)}">
+
+											</label>
+											<label
+												sclass="info-descripcion-evento" value="        ">
+											</label>
+											<label
+												sclass="info-titulo-evento">
+												Fecha Fin:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaFin)}">
+
+											</label>
+											<n:br></n:br>
+											<label
+												sclass="info-titulo-evento">
+												Lugar:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="@bind(vm.selectedObject.fkDirectorio.nombre)">
+											</label>
+											<n:br></n:br>
+											<label
+												sclass="info-titulo-evento">
+												Dirección:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="@bind(vm.selectedObject.fkDirectorio.direccion)">
+
+											</label>
+											<n:br></n:br>
+
+										</div>
+										<div sclass="col s4">
+											<image
+												class="img-responsive center-block"
+												src="/imagenes/portal/icon/mapa.png"
+												style="width: auto;padding: 0px;margin: 0px;display: inline-block;">
+											</image>
+											<span
+												class="fa fa-search center-block"
+												style=" width: auto; margin: 0px; display: inline-block;vertical-align: bottom;color:#3b85a1">
+											</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class=" col s12">
+						<div class=" row line-evento"
+							style="margin:0px">
+						</div>
+					</div>
 				</div>
-				<div sclass="col s5" style="padding:0px">
-					<listbox model="@load(vm.indicadores)"
-						height="300px" emptyMessage="No hay indicadores registrados."
-						selectedItems="@bind(vm.indicadoresSeleccionados)"
-						multiple="true">
-						<listhead sizable="true">
-							<listheader label="Indicadores" />
-						</listhead>
-						<template name="model">
-							<listitem label="@load(each.nombre)">
-								<zscript>
+			</div>
+			<separator height="20px"></separator>
+			<div class="row">
+				<div class="col s12" align="center"
+					style="margin-bottom: 10px;">
+					<label
+						value="Seleccione los indicadores del trabajo social planificado"
+						sclass="label-medium-500">
+					</label>
+				</div>
+
+			</div>
+			<div class="row">
+				<div class="col s12" style="padding-left: 65px;">
+					<div sclass="row">
+						<div sclass="col s12"
+							style="padding-right: 85px;">
+							<button label="Usar Plantilla"
+								onClick="@command('buscarPlantilla')"
+								sclass="buttonPlantilla">
+							</button>
+						</div>
+					</div>
+					<div sclass="col s5" style="padding:0px">
+						<listbox model="@load(vm.indicadores)"
+							height="300px" emptyMessage="No hay indicadores registrados."
+							selectedItems="@bind(vm.indicadoresSeleccionados)"
+							multiple="true">
+							<listhead sizable="true">
+								<listheader label="Indicadores" />
+							</listhead>
+							<template name="model">
+								<listitem label="@load(each.nombre)">
+									<zscript>
 	self.setDisabled(vm.disabledIndicador(each));
 </zscript>
-							</listitem>
-						</template>
-					</listbox>
-				</div>
-				<div sclass="col s1" align="center">
-					<div sclass="row">
-						<button sclass="button-conf"
-							iconSclass="fa fa-angle-double-right"
-							onClick="@command('agregarIndicadoresPlantilla')" />
+								</listitem>
+							</template>
+						</listbox>
 					</div>
-					<div sclass="row">
-						<button sclass="button-conf"
-							iconSclass="fa fa-angle-double-left"
-							onClick="@command('removerIndicadoresPlantilla')" />
+					<div sclass="col s1" align="center">
+						<div sclass="row">
+							<button sclass="button-conf"
+								iconSclass="fa fa-angle-double-right"
+								onClick="@command('agregarIndicadoresPlantilla')" />
+						</div>
+						<div sclass="row">
+							<button sclass="button-conf"
+								iconSclass="fa fa-angle-double-left"
+								onClick="@command('removerIndicadoresPlantilla')" />
+						</div>
 					</div>
-				</div>
 
-				<div sclass="col s5" style="padding:0px">
-					<listbox height="300px"
-						emptyMessage="No hay indicadores asociados al del trabajo social."
-						model="@bind(vm.trabajoSocialIndicadores)"
-						selectedItems="@bind(vm.trabajoSocialIndicadoresSeleccionados)"
-						multiple="true">
-						<listhead sizable="true">
-							<listheader
-								label="Indicadores del trabajo social" />
-						</listhead>
-						<template name="model">
-							<listitem label="@load(each.nombre)" />
-						</template>
-					</listbox>
+					<div sclass="col s5" style="padding:0px">
+						<listbox height="300px"
+							emptyMessage="No hay indicadores asociados al del trabajo social."
+							model="@bind(vm.trabajoSocialIndicadores)"
+							selectedItems="@bind(vm.trabajoSocialIndicadoresSeleccionados)"
+							multiple="true">
+							<listhead sizable="true">
+								<listheader
+									label="Indicadores del trabajo social" />
+							</listhead>
+							<template name="model">
+								<listitem label="@load(each.nombre)" />
+							</template>
+						</listbox>
+					</div>
 				</div>
 			</div>
 		</div>
